--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                  
             <!-- Button  -->
             <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              Free Consultation
+              See More
             </button>
 
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -364,7 +364,7 @@
 <div class="fa col-12 row align-items-center bg-dark text-white mt-4 p-3" id="about us">
     <div class="col-md-3 mt-3 p-3">
       <img class="rounded rounded-circle" src="images/images (14).jpeg" height="100px" width="100px">
-      <p>Justice, in it's broadest sense, is the principle that people receive that which they deserve, with the interpretation of what then constitutes "deserving" being impacted upon by numerous fields.</p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos quisquam nulla ullam quo corrupti laboriosam inventore adipisci est maiores ducimus?</p>
       </div>
       <div class="col-md-3 mt-3">
        <h3 class="">Usefull Link</h3>
